fix toggler icon not centered

--- a/post/post-detail.style.css
+++ b/post/post-detail.style.css
@@ -81,7 +81,7 @@
 }
 
 .heading-tree__toggler_opened {
-  display: block;
+  display: flex;
 }
 
 .heading-tree__toggler:hover {
